--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>NCV OTP</title>
+  <title>Get 2FA Code</title>
   <style>
     body {
       margin: 0 auto;
@@ -47,7 +47,7 @@
 
 <body>
   <div class="content">
-    <h1>Get 2FA</h1>
+    <h1>Get 2FA Code</h1>
     <hr>
     <a>Secret: </a><input name="secret" type="text" maxlength="512" id="secret" value="JBSWY3DPEHPK3PXP"
       onchange="updatSecret();" />
