--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Get 2FA Code</title>
   <style>
     body {
+      padding-top: 5%;
       margin: 0 auto;
       font-family: Tahoma, Verdana, Arial, sans-serif;
       background-color: whitesmoke;
