--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html>
-
 <head>
   <title>Get 2FA Code</title>
   <link rel="stylesheet" href="css/otp.css">
   <script src="js/jsOTP.min.js"></script>
 </head>
-
 <body>
   <div class="content">
     <h1>Get 2FA Code</h1>
@@ -14,48 +12,11 @@
       onchange="updatSecret();" />
     <h2 id="code-1" onclick="copyText();">OTP CODE</h2>
     <p id="ticker">Expires later: time second</p>
-    <progress id="timecountdown" value="22" max="30"></progress>
+    <progress id="timecountdown" value="0" max="30"></progress>
   </div>
-
-  <script>
-    var totp = new jsOTP.totp();
-    var secret = document.getElementById("secret").value;
-
-    function copyText() {
-      var copyText = totp.getOtp(secret);
-      navigator.clipboard.writeText(copyText);
-    }
-
-    function updatSecret() {
-      secret = document.getElementById("secret").value.replaceAll(" ", "");
-      updateTotp();
-    }
-
-    function updateTicker(tick) {
-      document.getElementById("ticker").innerText = "Expires later: " + tick + " second";
-
-    }
-
-    function updateTotp() {
-      document.getElementById("code-1").innerText = totp.getOtp(secret);
-    }
-
-    updateTotp();
-
-    function timeLoop() {
-      var epoch = Math.round(new Date().getTime() / 1000.0);
-      var countDown = 30 - (epoch % 30);
-      document.getElementById("timecountdown").value = 30 - countDown;
-      updateTicker(countDown);
-      if (epoch % 30 == 0) updateTotp();
-    }
-
-    setInterval(timeLoop, 1000);
-
-  </script>
+  <script src="js/otp.js"></script>
 </body>
 <footer>
   <p>&copy; 2021 by NCV</p>
 </footer>
-
 </html>
